# TFG-Quantum-Cryptographic-Protocols

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/0_introduction/: qiskit-introduction.ipynb
notebooks/1_deutsch-jozsa/: deutsch-jozsa_ibm.ipynb
notebooks/2_bernstein-vazirani/: bernstein-varizani_medium.ipynb  bernstein-vazirani_ibm.ipynb
notebooks/2_bernstein-vazirani/results/: bernstein_vazirani_cache_3qubits.json  bernstein_vazirani_cache_5qubits.json
notebooks/3_quantum_primitives/qft/: quantum_fourier_transform.ipynb
notebooks/3_quantum_primitives/qpe/: quantum_phase_estimation.ipynb
notebooks/4_shor/: shors_algorithm.ipynb
notebooks/5_grover/: grover_algorithm.ipynb  grover_on_caesar_and_vignere.ipynb
src/algorithms/1_deutsch-jozsa/: deutsch-jozsa_ket_g.ipynb
src/algorithms/2_bernstein-vazirani/: bernstein-vazirani_ibm.ipynb
src/algorithms/bernstein_vazirani/: utils.py
src/algorithms/deutsch_jozsa/: utils.py
src/algorithms/grover/: grover_algorithm.py
src/algorithms/quantum_primitives/: qft.py  qpe.py
src/algorithms/shor/: shor_algorithm.py
src/algorithms/tests/: conftest.py  test_bernstein_vazirani.py  test_deutsch_jozsa.py  test_grover.py  test_quantum_primitives.py  test_shor.py
