[tool.poetry]
name = "tfg-quantum-cryptographic-protocols"
version = "0.1.0"
description = "A comprehensive implementation and simulation framework of quantum cryptographic protocols and attacks for a Bachelor's Thesis in Computer Engineering."
authors = ["Himar Edhey Hernández Alonso <alu0101552392@ull.edu.es>"]
license = "MIT"
readme = "README.md"
packages= [{include = "src"}]
package-mode = true

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
qiskit = "2.2.3"
qiskit-aer = "0.17.2"
matplotlib = "3.10.7"
ipykernel = "7.1.0"
numpy = "2.3.4"
scipy = "1.16.3"
sympy = "1.14.0"
pillow = "12.0.0"
pylatexenc = "^2.10"
qiskit-ibm-runtime = "^0.47.0"
pandas = "^3.0.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.20"
pytest = "^9.1.1"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    ".ipynb_checkpoints",
    ".venv",
    "results",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"